# wonderbot-v5

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
configs/: default.toml
scripts/: seed_from_legacy.py
tests/: test_phase10_5_voice.py
wb1056/: README.md  pyproject.toml  requirements.txt
wb1056/configs/: default.toml
wb1056/docs/: PHASE10_NOTES.md
wb1056/tests/: test_ganglion.py  test_phase10_5_6_vad_stt.py
wb1056/wonderbot/: config.py  diagnostics.py  perception.py
wb1056/wonderbot/sensors/: hub.py
wb1060/: .gitignore  pyproject.toml
wb1060/configs/: default.toml
wb1060/configs/profiles/: big-machine-dual-gpu-template.toml  current-box-cpu.toml  current-box-p1000.toml
wb1060/docs/: ARCHITECTURE.md  LEGACY_MAP.md  PHASE10_5_3_NOTES.md  PHASE9_NOTES.md  SLEEP_NOTES.md  hardware_profiles.md
wb1060/tests/: test_agent.py  test_event_codec.py  test_live_perception.py  test_memory.py  test_phase10_5_3_microphone.py  test_phase10_actions.py  test_phase4_multimodal.py  test_phase6_consolidation.py  test_phase8_identity_goals.py  test_runtime_devices.py
wb1060/wonderbot/: agent.py  cli.py  config.py  diagnostics.py  ganglion.py  goals.py  hardware.py  lifecycle.py  llm_backends.py  memory.py  perception.py  replay.py  resonance.py  selfmodel.py  tts.py
wb1060/wonderbot/sensors/: __init__.py  base.py  camera.py  hub.py  microphone.py
wonderbot/: __init__.py  agent.py  cli.py  config.py  diagnostics.py  execution.py  llm_backends.py  longterm.py  selfmodel.py  tts.py
wonderbot-v10_5-openai-voice/: README.md  pyproject.toml  requirements.txt
wonderbot-v10_5-openai-voice/configs/: default.toml
wonderbot-v10_5-openai-voice/docs/: PHASE10_5_NOTES.md  PHASE11_NOTES.md
wonderbot-v10_5-openai-voice/notes/: hello.txt
wonderbot-v10_5-openai-voice/state_backup/: goals.json  journal.json  long_term_memory.json  plans.json  replay.jsonl  self_model.json
wonderbot-v10_5-openai-voice/tests/: test_phase10_5_voice.py  test_phase11_workspace.py  test_phase5_stability.py
wonderbot-v10_5-openai-voice/wonderbot/: config.py  diagnostics.py  external_tools.py  goals.py  journal.py  planner.py  tts.py
wonderbot-v10_5-openai-voice/wonderbot/sensors/: hub.py  microphone.py
wonderbot-v10_5_3-stream-mic/: requirements.txt  run_wonderbot.bat
wonderbot-v10_5_3-stream-mic/configs/: default.toml
wonderbot-v10_5_3-stream-mic/docs/: CONSOLIDATION_NOTES.md
wonderbot-v10_5_3-stream-mic/wonderbot/: agent.py
wonderbot-v10_5_3-stream-mic/wonderbot-v10_5_3-stream-mic/docs/: PHASE10_5_NOTES.md
wonderbot-v10_5_3-stream-mic/wonderbot-v10_5_3-stream-mic/scripts/: __init__.py  seed_from_legacy.py
wonderbot-v10_5_3-stream-mic/wonderbot-v10_5_3-stream-mic/wonderbot/: consolidation.py  event_codec.py
wonderbot-v10_5_3-stream-mic/wonderbot/sensors/: hub.py  microphone.py
wonderbot-v10_5_4-live-reply-repair/: pyproject.toml  run_wonderbot.sh
wonderbot-v10_5_4-live-reply-repair/configs/: default.toml
wonderbot-v10_5_4-live-reply-repair/tests/: test_phase7_sleep.py  test_phase9_planning.py
wonderbot-v10_5_4-live-reply-repair/wonderbot/: agent.py  config.py  longterm.py  perception.py
wonderbot-v10_5_4-live-reply-repair/wonderbot/sensors/: microphone.py
wonderbot-v10_5_5-stt-fix/configs/: default.toml
wonderbot-v10_5_5-stt-fix/docs/: PHASE10_5_5_NOTES.md  PHASE8_NOTES.md
wonderbot-v10_5_5-stt-fix/tests/: test_phase10_5_4_live_reply_gating.py
wonderbot-v10_5_5-stt-fix/wonderbot/: cli.py  execution.py  llm_backends.py  perception.py  tts.py
wonderbot-v10_5_5-stt-fix/wonderbot/sensors/: microphone.py
wonderbot/sensors/: microphone.py
